--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-<div id="demotext">Edit this text</div> 
+<div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
 </body>
 </html>
