--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
 </head>
 <body>
+<background-color:#FFFF00;>  
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
 <marquee style='width: 30%; color: green;'><b><div id="demotext">скут</div></b></marquee>  
