--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
 </head>
-<body>
-<background-color:#FFFF00;>  
+<body style="background-color:#FFFF00>
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
 <marquee style='width: 30%; color: green;'><b><div id="demotext">скут</div></b></marquee>  
