--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
-<marquee style='width: 30%; color: green;'><b><div id="demotext">скут</div></b></marquee>  
+<marquee style='width: 30%; color: green;'><b><div id="demotext">скут</div></b></marquee>
+<h1>что с гитхабом не так</h1>  
 </body>
 </html>
