--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
 <marquee style='width: 30%; color: green;'><b><div id="demotext">скут</div></b></marquee>
-<h1>что с гитхабом не так</h1>  
+<h1>что с гитхабом не так</h1>
+<p>сайт с помощью:</p>  
+<p><a href="https://html-css-js.com/">сайт</a></p>  
 </body>
 </html>
