--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <marquee style='width: 30%; color: green;'><b><div id="demotext">скут</div></b></marquee>
 <h1>что с гитхабом не так</h1>
 <p>сайт с помощью:</p>  
-<p><a href="https://html-css-js.com/">сайт</a></p>  
+<p><a href="https://html-css-js.com/">сайт</a></p> 
+<p><a href="https://www.glideapps.com/">Glide</p>  
 </body>
 </html>
