--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <h1>что с гитхабом не так</h1>
 <p>сайт с помощью:</p>  
 <p><a href="https://html-css-js.com/">сайт</a></p> 
-<p><a href="https://www.glideapps.com/">Glide</p>  
+<p><a href="https://www.glideapps.com/">Glide</a></p>  
 </body>
 </html>
