--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <h1>что с гитхабом не так</h1>
 <p>сайт с помощью:</p>  
 <p><a href="https://html-css-js.com/">сайт</a></p> 
-<p><a href="https://www.glideapps.com/">Glide</a></p>  
+ <p>другие ссылки</p> 
+<p><a href="https://www.glideapps.com/">Glide</a></p>
+<p><a href="https://colorscheme.ru/">генератор цветов</a></p>
+<p><a href="https://dewiar.com/">помощь 2</a></p>
+<p><a href="https://myneuralnetworks.ru/">генератор иконок</a></p>
+<p><a href="https://ilim24.ru/gallery/noviy/Ust-Ilimsk_6047.jpg">Усть-Илимск</a></p>
+<p><a href="https://fusionbrain.ai/">Нейросеть</a></p>  
 </body>
 </html>
