--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta charset="utf-8">
 </head>
 <body>
+<header class="site-header">
+<div id="demotext">Сайт на гитхабе</div> 
+</header>   
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
 <marquee style='width: 30%; color: green;'><b>скут</b></marquee>
@@ -14,7 +17,13 @@
   <rect x="180" y="110" width="250" height="250" rx="40" style="fill:blue; stroke:black; fill-opacity:0.5;" />
   </svg>  
 <h1>что с гитхабом не так</h1>
-<h2><div id="demoFont">Незнаю</div></h2>  
+<h2><div id="demoFont">Незнаю</div></h2> 
+<ul>
+ <li>незнаю</li>
+ <li>ytpyf.</li>
+ <li>юанзен</li>
+</ul>
+<h3>А может быть знаю....</h3>  
 <p>сайт с помощью:</p>  
 <p><a href="https://html-css-js.com/">сайт</a></p> 
  <p>другие ссылки</p> 
