--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
  <li>ytpyf.</li>
  <li>юанзен</li>
 </ul>
-<h3>А может быть знаю....</h3>  
+<h3>А может быть знаю...</h3>  
 <p>сайт с помощью:</p>  
 <p><a href="https://html-css-js.com/">сайт</a></p> 
- <p>другие ссылки</p> 
+ <p>другие ссылки:</p> 
 <p><a href="https://www.glideapps.com/">Glide</a></p>
 <p><a href="https://colorscheme.ru/">генератор цветов</a></p>
 <p><a href="https://dewiar.com/">помощь 2</a></p>
