--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header class="site-header">
-<div id="demotext">Сайт на гитхабе</div> 
+<h2>Сайт на гитхабе</h2> 
 </header>   
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
