--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <header class="site-header">
-<h2>Сайт на гитхабе</h2> 
-</header>   
+      <p>Сайт на гитхабе</p> 
+  </header>  
+  
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
 <marquee style='width: 30%; color: green;'><b>скут</b></marquee>
