--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <p><a href="https://dewiar.com/">помощь 2</a></p>
 <p><a href="https://myneuralnetworks.ru/">генератор иконок</a></p>
 <p><a href="https://ilim24.ru/gallery/noviy/Ust-Ilimsk_6047.jpg">Усть-Илимск</a></p>
-<p><a href="https://fusionbrain.ai/">Нейросеть</a></p>  
+<p><a href="https://fusionbrain.ai/">Нейросеть</a></p>
+<p><a href="https://leonardo.ai/">ещё одна нейросеть</p>  
 </body>
 </html>
