--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 <p><a href="https://myneuralnetworks.ru/">генератор иконок</a></p>
 <p><a href="https://ilim24.ru/gallery/noviy/Ust-Ilimsk_6047.jpg">Усть-Илимск</a></p>
 <p><a href="https://fusionbrain.ai/">Нейросеть</a></p>
-<p><a href="https://leonardo.ai/">ещё одна нейросеть</p>  
+<p><a href="https://leonardo.ai/">ещё нейросеть</p>  
 </body>
 </html>
