--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header class="site-header">
       <p>Сайт на гитхабе</p> 
   </header>  
-  
+body { background-color:RoyalBlue; }  
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
 <marquee style='width: 30%; color: green;'><b>скут</b></marquee>
