--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
 </head>
-<body>
+<body { background-color:RoyalBlue; }>
   
 <header class="site-header">
       <p>Сайт на гитхабе</p> 
