--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   
 <header class="site-header">
-      <p>Сайт на гитхабе</p> 
+      <h2>Сайт на гитхабе</h2> 
   </header>
     
 <div id="demotext">баник</div> 
