--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
-<marquee style='width: 30%; color: green;'><b>скут</b></marquee>
+<marquee style='width: 50%; color: white;'><b>скут</b></marquee>
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 450 400" width="200" height="200">
   <rect x="80" y="60" width="250" height="250" rx="20" style="fill:red; stroke:black; fill-opacity:0.7" />
   <rect x="180" y="110" width="250" height="250" rx="40" style="fill:blue; stroke:black; fill-opacity:0.5;" />
