--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     
 <div id="demotext">баник</div> 
 <p>сайт на гитхабе</p>
+<ul id="navbar">
+  <li><a href="#">Главная</a></li>
+  <li><a href="#">Новости</a></li>
+  <li><a href="#">Контакты</a></li>
+  <li><a href="#">О нас</a></li>
+</ul>  
 <marquee style='width: 50%; color: white;'><b>скут</b></marquee>
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 450 400" width="200" height="200">
   <rect x="80" y="60" width="250" height="250" rx="20" style="fill:red; stroke:black; fill-opacity:0.7" />
