--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <p>сайт на гитхабе</p>
 <ul id="navbar">
   <li><a href="#">Главная</a></li>
-  <li><a href="#">Новости</a></li>
-  <li><a href="#">Контакты</a></li>
-  <li><a href="#">О нас</a></li>
+  <li><a href="#">чо</a></li>
+  <li><a href="#">Как так</a></li>
+  <li><a href="#">ну ладно</a></li>
 </ul>  
 <marquee style='width: 50%; color: white;'><b>скут</b></marquee>
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 450 400" width="200" height="200">
