--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <p><a href="https://myneuralnetworks.ru/">генератор иконок</a></p>
 <p><a href="https://ilim24.ru/gallery/noviy/Ust-Ilimsk_6047.jpg">Усть-Илимск</a></p>
 <p><a href="https://fusionbrain.ai/">Нейросеть</a></p>
-<p><a href="https://leonardo.ai/">ещё нейросеть</p>  
+<p><a href="https://leonardo.ai/">ещё нейросеть</p>
+<p><a href="https://colab.google/">коллаб</p>  
+<p><a href="https://datalens.yandex.ru/">яндекс даталенс</p>  
 </body>
 </html>
