--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  <li>юанзен</li>
 </ul>
 <h3>А может быть знаю...</h3> 
-<div id="transition">транзишн текст</div>  
+<div class="block-animation"></div>  
 <p>сайт с помощью:</p>  
 <p><a href="https://html-css-js.com/">сайт</a></p> 
  <p>другие ссылки:</p> 
