--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 <p><a href="https://leonardo.ai/">ещё нейросеть</p>
 <p><a href="https://colab.google/">коллаб</p>  
 <p><a href="https://datalens.yandex.ru/">яндекс даталенс</p>  
-  <img i=d="img1" src="maxresdefault-11.jpg>
+  <img id="img1" src="maxresdefault-11.jpg">
 </body>
 </html>
