--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <p><a href="https://leonardo.ai/">ещё нейросеть</p>
 <p><a href="https://colab.google/">коллаб</p>  
 <p><a href="https://datalens.yandex.ru/">яндекс даталенс</p>  
-<a >  <img id="img1" src="maxresdefault-11.jpg"></a>
+<p><a href="https://jsitor.com/"></p>
+  
 </body>
 </html>
