--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 <p><a href="https://colab.google/">коллаб</p>  
 <p><a href="https://datalens.yandex.ru/">яндекс даталенс</p>  
 <p><a href="https://jsitor.com/"></p>
-  
+<p><a href="ivan3514.github.io/third/"></p>  
 </body>
 </html>
