--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <p><a href="https://leonardo.ai/">ещё нейросеть</p>
 <p><a href="https://colab.google/">коллаб</p>  
 <p><a href="https://datalens.yandex.ru/">яндекс даталенс</p>  
-<p><a href="https://jsitor.com/"></p>
-<p><a href="ivan3514.github.io/third/"></p>  
+<p><a href="https://jsitor.com/">джейситор</p> 
+<p><a href="https://msiter.ru/references/html5-canvas/shadowcolor">мситер</p>  
 </body>
 </html>
