--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
 </head>
-<body>
+<body bgcolor="#4169E1">
   
 <header class="site-header">
       <h2>Сайт на гитхабе</h2> 
@@ -35,8 +35,8 @@
 <div class="block-animation"></div> 
   <p style="text-align: center">
 
-	<button>Покорми меня!</button>
-	<p>А здесь еды нет</p>
+	<button>на салат меня</button>
+	<p>ёпта огурец</p>
 
 	<style>
 		body {
@@ -72,13 +72,13 @@ requestAnimationFrame(animate);
 
 var button = document.querySelector("button");
 button.addEventListener("click", function() {
-alert("Маловато будет!");
+alert("зачем :(");
 });
 
 document.getElementById('myImg').onclick = myFunction;
 
 function myFunction() {
-  alert('Ouch!!!');
+  alert('ах');
 }
 
 
