--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <p><a href="https://datalens.yandex.ru/">яндекс даталенс</p>  
 <p><a href="https://jsitor.com/">джейситор</p> 
 <p><a href="https://msiter.ru/references/html5-canvas/shadowcolor">мситер</p>  
-<p><a href="https://ivan3514.github.io/four/">летающий огурец</p>  
+<p><a href="https://ivan3514.github.io/four/">летающий огурец</p> 
+<p><a href="https://htmlacademy.ru/courses/343?utm_source=yandex&utm_medium=cpc&utm_campaign=ru_courses_rsya_76121587&utm_term=JavaScript&utm_content=dzen.ru.15656838799.desktop.49383775315.Усть-Илимск&yclid=3780499410446188543">html академия</p>  
 </body>
 </html>
