--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 <head>
   <title>мой сайт</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" href="https://pyscript.net/alpha/pyscript.css" />
+  <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   <meta charset="utf-8">
 </head>
 <body bgcolor="#4169E1">
@@ -50,6 +51,15 @@
 <p><a href="https://msiter.ru/references/html5-canvas/shadowcolor">мситер</p>  
 <p><a href="https://ivan3514.github.io/four/">летающий огурец</p> 
 <p><a href="https://htmlacademy.ru/courses/343?utm_source=yandex&utm_medium=cpc&utm_campaign=ru_courses_rsya_76121587&utm_term=JavaScript&utm_content=dzen.ru.15656838799.desktop.49383775315.Усть-Илимск&yclid=3780499410446188543">html академия</p>
-<p><a href="https://https://pythontutor.com/render.html#mode=display">питон отладчик</p>  
+<p><a href="https://pythontutor.com/render.html#mode=display">питон отладчик</p>  
+<p><a href="https://pythontutor.com">визуализатор кода</p>  
+      <py-script> 
+a = ['f','d','s','a']
+x = -1
+scope = vars()
+for i in a:
+    scope['x']+=1
+    print (a[x])
+    </py-script>
 </body>
 </html>
