--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <title>мой сайт</title>
-  <link rel="stylesheet" href="style.css" href="https://pyscript.net/alpha/pyscript.css" />
+  <link rel="stylesheet" href="style.css" href="style.python" />
   <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   <meta charset="utf-8">
 </head>
