--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <p><a href="https://htmlacademy.ru/courses/343?utm_source=yandex&utm_medium=cpc&utm_campaign=ru_courses_rsya_76121587&utm_term=JavaScript&utm_content=dzen.ru.15656838799.desktop.49383775315.Усть-Илимск&yclid=3780499410446188543">html академия</p>
 <p><a href="https://pythontutor.com/render.html#mode=display">питон отладчик</p>  
 <p><a href="https://pythontutor.com">визуализатор кода</p>  
+  <script language="python">
       <py-script> 
 a = ['f','d','s','a']
 x = -1
@@ -61,5 +62,6 @@ for i in a:
     scope['x']+=1
     print (a[x])
     </py-script>
+  </script>
 </body>
 </html>
